requirements.txt Updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+geocoder
+sqlalchemy
 click==6.7
 Flask==1.0.2
 Flask-Gunicorn==0.1.1
 gunicorn==19.9.0
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2==2.10.1
 MarkupSafe==1.0
+portalocker==1.2.1
 psycopg2==2.7.5
+pypiwin32==223
+pywin32==223
 requirements==0.1
 Werkzeug==0.14.1
+wtforms
+pool
